[package]
name = "vpe_cpp"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpe_cpp"
path = "src/vpe_cpp.rs"
crate-type = ["staticlib"]

[dependencies]
ub_vpe_custom = { path="ub-vpe-custom" }
vpe = { path="vp-engine" }
vpb = { path="vp-engine/vp-base" }
winit = "0.28.3"
nalgebra = "0.31.4"
cxx = "1.0.97"

[build-dependencies]
cxx-build = "1.0.97"